--- a/Lecture01-Examples/Example02/Example02.csproj
+++ b/Lecture01-Examples/Example02/Example02.csproj
@@ -44,10 +44,15 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\StudentManagementLibrary\StudentManagementLibrary\StudentManagementLibrary.csproj">
+      <Project>{0dd62b37-5877-4a16-9262-987b9628fe77}</Project>
+      <Name>StudentManagementLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
